--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section {
     padding: 40px;
 }
 
-.hero {
+.Top {
     background-image: url('hero.jpg');
     background-size: cover;
     text-align: center;
